# BALBM

./: CMakeLists.txt  README.md  TODO
include/: balbm.hh  balbm_config.hh  callback.hh  collision_manager.hh  constitutive.hh  equilibrium.hh  force.hh  helpers.hh  lattice.hh  multiscale_map.hh  node_desc.hh  simulate.hh  simulation.hh
include/helpers/: mem_helpers.hh  prof_helpers.hh  type_helpers.hh
src/: collision_manager.cc  constitutive.cc  equilibrium.cc  force.cc  lattic.cc  lattice.cc  multiscale_map.cc  node_desc.cc  simulate.cc
test/: CMakeLists.txt  test_lat_vecs.cc  test_mem.cc  test_poiseuille_newtonian.cc  test_prof.cc
